--- a/Amir/amir.html
+++ b/Amir/amir.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-Amir</title>
-    <link rel="stylesheet" href="../css-js.login/amir.css">
+    <link rel="stylesheet" href="../CSS/amir.css">
+    <link rel="icon" type="img/png" href="../photo/icon-1.2.png">
 </head>
 <body>
     <div class="hi">
